--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,11 +25,15 @@
     "nodemailer": "^6.4.14",
     "pg": "^8.4.1",
     "tsyringe": "^4.3.0",
-    "typeorm": "^0.2.28"
+    "typeorm": "^0.2.28",
+    "uuidv4": "^6.2.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.15",
+    "jest": "^26.6.0",
+    "ts-jest": "^26.4.1",
     "ts-node-dev": "^1.0.0",
     "tsconfig-paths": "^3.9.0"
   }
